<resources>
    <string name="app_name">Realestatemanager</string>
    <string name="page_title">Reale State Manager</string>
    <string name="search">search</string>
    <string name="more">more</string>
    <string name="favorite">favorite</string>
    <string name="content_description_search">description</string>
    <string name="content_description_favorite">description</string>
    <string name="content_description_more">description</string>
    <string name="update">update</string>
    <string name="typelabel">Realty type</string>
    <string name="pricelabel">Realty price</string>
    <string name="surfacelabel">Realty surface</string>
    <string name="numberlabel">Number pf piece</string>
    <string name="descriptiolabel">Description</string>
    <string name="townlabel">Town</string>
    <string name="adresslabel">Adress</string>
    <string name="add">add</string>
    <string name="content_description_add">add</string>
    <string name="makeitsolde">Make it sold</string>
    <string name="delete">delete</string>
    <string name="availableText">AVAILABLE</string>
    <string name="SoldText">Sold</string>
    <string name="uniteSurface">m2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Le montant de votre pret en €</string>
    <string name="duration">La durée de l’emprunt en mois :</string>
    <string name="aport">L\'apport de votre pret en €</string>
    <string name="taux">Taux d\'intéret</string>
    <string name="monthlyAmount">Votre mensulatité sera de : </string>
    <string name="estimate">estimate monthly payement</string>
    <string name="money">€</string>
    <string name="dateOnLine">"Date putting online : "</string>
    <string name="cama">", "</string>>

</resources>