<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_24"
        android:title="@string/add"
        android:contentDescription="@string/content_description_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/estimate"
        android:icon="@drawable/ic_baseline_calculate_24"
        android:title="@string/estimate"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

</menu>