<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <ImageView
        android:id="@+id/realtyShoot"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/belleappart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="900dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <GridView
                    android:id="@+id/gridview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:numColumns="500"
                    android:columnWidth="200dp"
                    android:gravity="center"
                    tools:listitem="@layout/itempic"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbars="horizontal"
                    android:stretchMode="none"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"
                    />
            </LinearLayout>
        </FrameLayout>
    </HorizontalScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/TransperantToolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addShot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        android:backgroundTint="#00BCD4"
        android:text="Add shoot"
        app:layout_constraintBottom_toTopOf="@id/typeTextField"
        app:layout_constraintEnd_toEndOf="@id/realtyShoot"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/typeTextField"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/typelabel"
        app:layout_constraintTop_toBottomOf="@id/realtyShoot"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceTextField"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/pricelabel"
        app:layout_constraintStart_toEndOf="@id/typeTextField"
        app:layout_constraintTop_toTopOf="@id/typeTextField"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surfaceTextField"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/surfacelabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceTextField"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberOfPieceTextField"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/numberlabel"
        app:layout_constraintStart_toEndOf="@id/surfaceTextField"
        app:layout_constraintTop_toTopOf="@id/surfaceTextField"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/townTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/townlabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextField"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adressTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adresslabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/townTextField"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptiolabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberOfPieceTextField"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add realty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adressTextField"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>